--- a/foundation-6/index.html
+++ b/foundation-6/index.html
@@ -7,16 +7,20 @@
     <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/foundation-flex.css" />
   </head>
   <body>
 
     <div class="row">
-      <div class="large-12 columns">
-        <h1>Welcome to Foundation for Sites 6</h1>
+      <div class="columns">
+        <h1>This is the comments sidebar</h1>
+      </div>
+      <div class="columns">
+        <h1>video shit</h1>
       </div>
     </div>
 
-    <div class="row">
+<!--     <div class="row">
       <div class="large-12 columns">
         <div class="callout large">
           <h3>We&rsquo;re stoked you want to try Foundation! </h3>
@@ -48,7 +52,7 @@
     <div class="row">
       <div class="large-8 medium-8 columns">
         <h5>Here&rsquo;s your basic grid:</h5>
-        <!-- Grid Example -->
+     >
 
         <div class="row">
           <div class="large-12 columns">
@@ -160,7 +164,7 @@
         </div>
       </div>
     </div>
-
+ -->
     <script src="js/vendor/jquery.min.js"></script>
     <script src="js/vendor/what-input.min.js"></script>
     <script src="js/foundation.min.js"></script>
