start dev in /foundation-6/index.html

--- a/foundation-6/index.html
+++ b/foundation-6/index.html
@@ -10,13 +10,18 @@
     <link rel="stylesheet" href="css/foundation-flex.css" />
   </head>
   <body>
-
     <div class="row">
-      <div class="columns">
+      <div class="columns small-4" style="background:darkgrey">
         <h1>This is the comments sidebar</h1>
       </div>
-      <div class="columns">
+      <div class="columns" style="background:grey">
         <h1>video shit</h1>
+	<div class="row">
+	  <iframe width="560" height="315" src="https://www.youtube.com/embed/kZUPCB9533Y" frameborder="0" allowfullscreen></iframe>
+	</div>
+	<div class="row">
+	  THIS IS WHERE THE COMMENT GOES
+	</div>
       </div>
     </div>
 
