custom css moved to main.css

--- a/index.html
+++ b/index.html
@@ -8,22 +8,7 @@
     <link rel="stylesheet" href="css/foundation-6/css/foundation.css" />
     <link rel="stylesheet" href="css/foundation-6/css/app.css" />
     <link rel="stylesheet" href="css/foundation-6/css/foundation-flex.css" />
-
-    <style>
-      ul {
-        list-style: none;
-      }
-      .comment {
-        margin: 10px;
-        padding: 15px;
-        background: #d3d3d3;
-        border-radius: 5px;
-      }
-      .comment:hover {
-        background: #c3c3c3;
-        cursor: pointer;
-      }
-    </style>
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="row">
