--- a/index.html
+++ b/index.html
@@ -14,33 +14,40 @@
     <div class="row">
       <div class="columns small-4" style="background:darkgrey">
         <h1>Comments</h1>
-        <ul>
+        <ul class="comments">
           <li class="comment" onclick="goto(55)" > stuff</li>
           <li class="comment">thing</li>
         </ul>
       </div>
       <div class="columns" style="background:grey">
         <h1>video shit</h1>
-	<div class="row">
-    <div class="columns">
-	   <iframe id="player" width="560" height="315" src="https://www.youtube.com/embed/kZUPCB9533Y?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
-     </div>
-	</div>
-	<div class="row">
+      	<div class="row">
+          <div class="columns">
+      	   <iframe id="player" width="560" height="315" src="https://www.youtube.com/embed/kZUPCB9533Y?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+           </div>
+      	</div>
+      	<div class="row">
 
       <!-- <iframe type="text/html" width="200" height="150" src="http://www.youtube.com/embed/PjDw3azfZWI?enablejsapi=1" frameborder="0"></iframe>
       <br /> -->
-      <button onclick="seek(30)">Seek forward 30 seconds</button>
+          <button class="button" onclick="seek(30)">Seek forward 30 seconds</button>
 
-	</div>
+	     </div>
+       <div class="row">
+       <div class="columns">
+        <form class="comment-form">
+          <p>Comment</p>
+          <input class="comment-form-text" type="text">
+          <input type="submit" value="Submit">
+        </div>
+      </div>
       </div>
     </div>
-
-    <script src="http://www.youtube.com/player_api"></script>
-    <script src="javascript/main.js"></script>
-    <script src="css/foundation-6/js/vendor/jquery.min.js"></script>
-    <script src="css/foundation-6/js/vendor/what-input.min.js"></script>
-    <script src="css/foundation-6/js/foundation.min.js"></script>
-    <script src="css/foundation-6/js/app.js"></script>
   </body>
+  <script src="http://www.youtube.com/player_api"></script>
+  <script src="css/foundation-6/js/vendor/jquery.min.js"></script>
+  <script src="javascript/main.js"></script>
+  <script src="css/foundation-6/js/vendor/what-input.min.js"></script>
+  <script src="css/foundation-6/js/foundation.min.js"></script>
+  <script src="css/foundation-6/js/app.js"></script>
 </html>
