--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
         <ul class="comments">
           <li class="plus" onclick="goto(55)" >
             <div class="readMore" onclick="openClose(stuff)">+</div>
-            <div id="info"><b>stuff</b> (0m55s)</div>
-            <div class="desc" id="stuff">More things about stuff</div>
+            <div id="info"><b>This Went Well This Week!</b> (0m55s)</div>
+            <div class="desc" id="stuff">It really really did.</div>
           </li>
           <li class="delta" onclick="goto(12)">
             <div class="readMore" onclick="openClose(thing)">+</div>
-            <div id="info"><b>thing</b> (0m12s)</div>
-            <div class="desc" id="thing">More stuff about things</div>
+            <div id="info"><b>This Was Hard This Week</b> (0m12s)</div>
+            <div class="desc" id="thing">Do you have any feedback I could use to improve?</div>
           </li>
         </ul>
       </div>
       <div class="columns">
-        <h3>video shit</h3>
+        <h3>Video</h3>
       	<div class="row">
           <div class="columns">
       	   <iframe id="player" width="560" height="315" src="https://www.youtube.com/embed/kZUPCB9533Y?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
@@ -50,9 +50,9 @@
        <div class="row">
        <div class="columns">
         <form class="comment-form">
-          <input type="radio" name="categ" value="plus" id="categPlus"><label for="categPlus">Plus</label>
-          <input type="radio" name="categ" value="delta" id="categDelta"><label for="categDelta">Delta</label>
-          <input class="comment-form-text" type="text" placeholder="Comment"></input>
+          <input type="radio" name="categ" value="plus" id="categPlus" required><label for="categPlus">Plus</label>
+          <input type="radio" name="categ" value="delta" id="categDelta"><label for="categDelta">Delta (required)</label>
+          <input class="comment-form-text" type="text" placeholder="Comment (required)" required></input>
           <textarea class="comment-form-desc" type="text" rows="5" placeholder="Description (optional)"></textarea>
           <input class="button" type="submit" value="Submit">
         </div>
