replies to comments

--- a/index.html
+++ b/index.html
@@ -17,19 +17,52 @@
       </div>
     </div>
 
+    <!-- Upload New video stuff -->
+    <!-- <div class="row">
+      <div class="newVideo">
+        <div class="columns">
+          <form class="new-video-text">  
+            <input class="new-video-text" type="text" placeholder="YouTube URL"/>
+            <input class="button" type="submit" value="Submit"/>
+          </form>
+        </div>
+      </div>
+    </div> -->
+
     <div class="row">
       <div class="columns small-4">
         <h3>Comments</h3>
         <ul class="comments">
           <li class="plus" onclick="goto(55)" >
             <div class="readMore" onclick="openClose(stuff)">+</div>
-            <div id="info"><b>stuff</b> (0m55s)</div>
-            <div class="desc" id="stuff">More things about stuff</div>
+            <div id="info"><b>Mitch</b> says: <b>This part went great!</b> (0m55s)</div>
+            <div class="desc" id="stuff">
+              <p>More things about stuff</p>
+              <ul class="all-replies" id="stuff"></ul>
+              <div class="repl" onclick="openReply()">Reply</div>
+              <form class="reply-form" style="display: none;">
+                <input class="name" type="text" placeholder="Name">
+                <input class="reply-text" type="text" placeholder="Reply to Comment">
+                <input class="button" type="submit" value="Reply">
+              </form>
+            </div>
           </li>
           <li class="delta" onclick="goto(12)">
             <div class="readMore" onclick="openClose(thing)">+</div>
-            <div id="info"><b>thing</b> (0m12s)</div>
-            <div class="desc" id="thing">More stuff about things</div>
+            <div id="info"><b>Paige</b> says: <b>I think I could have done better here</b> (0m12s)</div>
+            <div class="desc" id="thing">
+              <p>More stuff about things</p>
+              <ul class="all-replies" id="thing">
+                <li class="reply"><b>Anne</b> says: fuck u this sucks</li>
+                <li class="reply"><b>Mitch</b> says: nah man I think ur gr8</li>
+              </ul>
+              <div class="repl" onclick="openReply()">Reply</div>
+              <form class="reply-form" style="display: none;">
+                <input class="name" type="text" placeholder="Name">
+                <input class="reply-text" type="text" placeholder="Reply to Comment">
+                <input class="button" type="submit" value="Reply">
+              </form>
+            </div>
           </li>
         </ul>
       </div>
@@ -37,6 +70,7 @@
         <h3>video shit</h3>
       	<div class="row">
           <div class="columns">
+          <!--https://www.youtube.com/watch?v=wOmjnioNulo-->
       	   <iframe id="player" width="560" height="315" src="https://www.youtube.com/embed/kZUPCB9533Y?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
            </div>
       	</div>
@@ -52,6 +86,7 @@
         <form class="comment-form">
           <input type="radio" name="categ" value="plus" id="categPlus"><label for="categPlus">Plus</label>
           <input type="radio" name="categ" value="delta" id="categDelta"><label for="categDelta">Delta</label>
+          <input class="comment-form-name" type="text" placeholder="Name"></input>
           <input class="comment-form-text" type="text" placeholder="Comment"></input>
           <textarea class="comment-form-desc" type="text" rows="5" placeholder="Description (optional)"></textarea>
           <input class="button" type="submit" value="Submit">
