--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="desc" id="thing">
               <p>Do you have any feedback to improve?</p>
               <ul class="all-replies" id="thing">
-                <li class="reply"><b>Anne</b> says: try that thing I told u about</li>
-                <li class="reply"><b>Mitch</b> says: nah man I think ur gr8</li>
+                <li class="reply"><b>Anne</b> says: Try changing this thing</li>
+                <li class="reply"><b>Mitch</b> says: Don't worry, this seems fine</li>
               </ul>
               <div class="repl" onclick="openReply()">Reply</div>
               <form class="reply-form" style="display: none;">
@@ -86,8 +86,8 @@
         <form class="comment-form">
           <input type="radio" name="categ" value="plus" id="categPlus" required><label for="categPlus">Plus</label>
           <input type="radio" name="categ" value="delta" id="categDelta"><label for="categDelta">Delta</label>
-          <input class="comment-form-name" type="text" placeholder="Name (required)" required></input>
-          <input class="comment-form-text" type="text" placeholder="Comment (required)" required></input>
+          <input class="comment-form-name" type="text" placeholder="Name" required></input>
+          <input class="comment-form-text" type="text" placeholder="Comment" required></input>
           <textarea class="comment-form-desc" type="text" rows="5" placeholder="Description (optional)"></textarea>
           <input class="button" type="submit" value="Submit">
         </div>
