--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <a class="drop-color">Shared With</a>
             <ul class="menu vertical">
               <li><a>Anne</a></li>
-              <li><a>Ben</a></li>
+              <li><a>Paige</a></li>
               <li><a>Mitch</a></li>
             </ul>
           </li>
-          <li><a class="drop-color">Your Name</a></li>
+          <li><a class="drop-color">Ben</a></li>
         </ul>
       </div>
     </div>
