things are still broken, but it starts to fix the plus icon, and I have to rebase

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
       <div class="columns small-4">
         <h3>Comments</h3>
         <ul class="comments">
-          <li class="plus" onclick="goto(55)" >
+          <li class="plus" onclick="goto(55, stuff)" >
             <div class="readMore" onclick="openClose(stuff)">+</div>
             <div id="info"><b>stuff</b> (0m55s)</div>
             <div class="desc" id="stuff">More things about stuff</div>
           </li>
-          <li class="delta" onclick="goto(12)">
+          <li class="delta" onclick="goto(12, thing)">
             <div class="readMore" onclick="openClose(thing)">+</div>
             <div id="info"><b>thing</b> (0m12s)</div>
             <div class="desc" id="thing">More stuff about things</div>
