fix plus/minus button behavior, comment expands/contracts only on clicking the title (not the whole box

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       <div class="columns small-4">
         <h3>Comments</h3>
         <ul class="comments">
-          <li class="plus" onclick="goto(55, stuff)" >
+          <li class="plus">
             <div class="readMore" onclick="openClose(stuff)">+</div>
-            <div id="info"><b>Mitch</b> says: <b>This part went well this week!</b> (0m55s)</div>
+            <div id="info" onclick="goto(55, stuff)"><b>Mitch</b> says: <b>This part went well this week!</b> (0m55s)</div>
             <div class="desc" id="stuff">
               <p>Look at how well it went</p>
               <ul class="all-replies" id="stuff"></ul>
@@ -76,9 +76,9 @@
               </form>
             </div>
           </li>
-          <li class="delta" onclick="goto(12, thing)">
+          <li class="delta">
             <div class="readMore" onclick="openClose(thing)">+</div>
-            <div id="info"><b>Paige</b> says: <b>I think I could have done better here</b> (0m12s)</div>
+            <div id="info" onclick="goto(12, thing)"><b>Paige</b> says: <b>I think I could have done better here</b> (0m12s)</div>
             <div class="desc" id="thing">
               <p>Do you have any feedback to improve?</p>
               <ul class="all-replies" id="thing">
