--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <ul class="comments">
           <li class="plus">
             <div class="readMore" id="openthis" onclick="openClose(stuff, openthis)">+</div>
-            <div id="info" onclick="goto(55, stuff, openthis)"><b>Mitch</b> says: <b>This part went well this week!</b> (0m55s)</div>
+            <div id="info" onclick="goto(61, stuff, openthis)"><b>Mitch</b> says: <b>This part went well this week!</b> (1m1s)</div>
             <div class="desc" id="stuff">
               <p>Look at how well it went</p>
               <ul class="all-replies" id="stuff"></ul>
@@ -78,7 +78,7 @@
           </li>
           <li class="delta">
             <div class="readMore" id="openthat" onclick="openClose(thing, openthat)">+</div>
-            <div id="info" onclick="goto(12, thing, openthat)"><b>Paige</b> says: <b>I think I could have done better here</b> (0m12s)</div>
+            <div id="info" onclick="goto(441, thing, openthat)"><b>Paige</b> says: <b>I think I could have done better here</b> (7m21s)</div>
             <div class="desc" id="thing">
               <p>Do you have any feedback to improve?</p>
               <ul class="all-replies" id="thing">
@@ -100,7 +100,7 @@
       	<div class="row">
           <div class="columns">
           <!--https://www.youtube.com/watch?v=wOmjnioNulo-->
-      	   <iframe id="player" width="560" height="315" src="https://www.youtube.com/embed/kZUPCB9533Y?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
+      	   <iframe id="player" width="560" height="315" src="https://www.youtube.com/embed/EqAlj3XZjjY?enablejsapi=1" frameborder="0" allowfullscreen></iframe>
            </div>
       	</div>
        <div class="row">
