change teacher name

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <li><a>Mitch</a></li>
             </ul>
           </li>
-          <li><a class="drop-color">Ben</a></li>
+          <li><a class="drop-color">Brad</a></li>
         </ul>
       </div>
     </div>
