added share feature

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               <li><a>Anne</a></li>
               <li><a>Paige</a></li>
               <li><a>Mitch</a></li>
+              <li><input type="search" placeholder="Share with. . ."></li>
             </ul>
           </li>
           <li><a class="drop-color">Brad</a></li>
